--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ google-resumable-media==2.6.0
 googleapis-common-protos==1.61.0
 grpcio==1.59.3
 grpcio-status==1.59.3
+gunicorn==21.2.0
 httplib2==0.22.0
 idna==3.4
 itsdangerous==2.1.2
@@ -30,6 +31,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 msgpack==1.0.7
 oauthlib==3.2.2
+packaging==23.2
 proto-plus==1.22.3
 protobuf==4.25.1
 pyasn1==0.5.0
