--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,8 @@ pyparsing==3.1.1
 python-dotenv==1.0.0
 requests==2.31.0
 rsa==4.9
+stripe==7.6.0
+typing_extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.1.0
 Werkzeug==3.0.1
