--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.6.0
+anyio==3.7.1
 autopep8==2.0.4
 blinker==1.7.0
 CacheControl==0.13.1
@@ -7,6 +9,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==41.0.5
+distro==1.8.0
 firebase==4.0.1
 firebase-admin==6.2.0
 Flask==3.0.0
@@ -24,13 +27,17 @@ googleapis-common-protos==1.61.0
 grpcio==1.59.3
 grpcio-status==1.59.3
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
 httplib2==0.22.0
+httpx==0.25.2
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 msgpack==1.0.7
 oauthlib==3.2.2
+openai==1.3.6
 packaging==23.2
 proto-plus==1.22.3
 protobuf==4.25.1
@@ -38,12 +45,17 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
 pycparser==2.21
+pydantic==2.5.2
+pydantic_core==2.14.5
 PyJWT==2.8.0
+pyOpenSSL==23.3.0
 pyparsing==3.1.1
 python-dotenv==1.0.0
 requests==2.31.0
 rsa==4.9
+sniffio==1.3.0
 stripe==7.6.0
+tqdm==4.66.1
 typing_extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.1.0
